bugfix: set overflow: hidden to avoid viewport increase

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,8 @@
 /* general */
 
 .App {
-  position: relative;
   padding: 20px;
   margin-bottom: 60px;
-}
-
-.layout {
-  position: relative;
 }
 
 a {
@@ -38,9 +33,8 @@ nav {
   width: 90vw;
   bottom: 0;
   z-index: 10;
-  height: 30px;
+  height: 40px;
   padding-top: 10px;
-  /* padding: 20px 20px 10px 20px; */
   background-color: white;
 }
 
@@ -75,15 +69,11 @@ nav ul {
   height: 100px;
 }
 
-.events-map-and-listings {
-  position: relative;
-}
-
 /* map */
 
 .mapContainer {
   position: fixed;
-  height: 50%;
+  height: 50vh;
   top: 0;
   right: 0;
   left: 0;
@@ -179,7 +169,7 @@ nav ul {
 .event-preview .start-time {
   font-size: 10px;
   font-weight: 600;
-  line-height: 18px;
+  padding: 5px 0;
   color: #666;
   text-transform: uppercase;
 }
@@ -192,7 +182,7 @@ nav ul {
 
 .event-preview .place {
   font-size: 11px;
-  line-height: 18px;
+  padding: 5px 0;
   color: #666;
 }
 
@@ -218,6 +208,7 @@ nav ul {
 
 .event-detail .place {
   margin: 10px 0 0 0;
+  padding: 5px 0;
   font-size: 16px;
   font-weight: 600;
 }
@@ -364,10 +355,9 @@ nav ul {
 }
 
 .profile .username {
-  margin: 15px 0;
+  margin: 10px 0;
   font-size: 32px;
   font-weight: 700;
-  line-height: 20px;
 }
 
 .profile .bio {
