--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-html, body, root {
-  position: relative;
+  overflow: hidden;
 }
 
 body {
